--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.1.0
+Version: 1.1.1
 Date: 2013-08-09
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
@@ -10,8 +10,8 @@ License: GPL-3
 Suggests: RUnit, org.Hs.eg.db,
         TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
 Depends: GenomicRanges, R (>= 3.0.0)
-Imports: methods, BiocGenerics, Biostrings, IRanges, GenomicFeatures,
-        Rsamtools, AnnotationDbi
+Imports: methods, BiocGenerics, IRanges, Biostrings, Rsamtools,
+        GenomicAlignments, GenomicFeatures, AnnotationDbi
 biocViews: Genetics, Infrastructure, Allelic Imbalance, AI, ASE,
         HighThroughputSequencing
 LazyData: TRUE
