--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,6 @@ importFrom(GenomicRanges, "seqlevels<-")
 importClassesFrom(GenomicRanges, GAlignments)
 importClassesFrom(GenomicRanges, GAlignmentPairs)
 
-importFrom(GenomicRanges, readGAlignments)
-importFrom(GenomicRanges, readGAlignmentPairs)
-
 
 
 importFrom(IRanges, Rle)
@@ -63,8 +60,11 @@ importFrom(Rsamtools, BcfFileList)
 importFrom(Rsamtools, indexBcf)
 importFrom(Rsamtools, FaFile)
 importFrom(Rsamtools, scanFa)
-importFrom(Rsamtools, readGAlignmentsFromBam)
-importFrom(Rsamtools, readGAlignmentPairsFromBam)
+
+importFrom(GenomicAlignments, readGAlignmentsFromBam)
+importFrom(GenomicAlignments, readGAlignmentPairsFromBam)
+importFrom(GenomicAlignments, readGAlignments)
+importFrom(GenomicAlignments, readGAlignmentPairs)
 
 
 #import classes
