also need to import GAlignmentsList from GenomicAlignments
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@83989 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(Rsamtools, scanFa)
 
 importClassesFrom(GenomicAlignments, GAlignments)
 importClassesFrom(GenomicAlignments, GAlignmentPairs)
+importClassesFrom(GenomicAlignments, GAlignmentsList)
 
 importFrom(GenomicAlignments, cigarToWidth)
 importFrom(GenomicAlignments, readGAlignmentsFromBam)
