add a few missing importFrom directives
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@84007 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,11 @@ importClassesFrom(GenomicAlignments, GAlignments)
 importClassesFrom(GenomicAlignments, GAlignmentPairs)
 importClassesFrom(GenomicAlignments, GAlignmentsList)
 
+importFrom(GenomicAlignments, cigarToRleList)
 importFrom(GenomicAlignments, cigarToWidth)
+importFrom(GenomicAlignments, GAlignments)
+importFrom(GenomicAlignments, GAlignmentPairs)
+importFrom(GenomicAlignments, GAlignmentsList)
 importFrom(GenomicAlignments, readGAlignmentsFromBam)
 importFrom(GenomicAlignments, readGAlignmentPairsFromBam)
 importFrom(GenomicAlignments, readGAlignments)
