Move GenomicAlignments from Imports to Depends field so cigarToRleList() is on the user's search path (needed in some examples).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@84010 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,9 @@ Description: Provides a framework for allelic specific expression investigation 
 License: GPL-3
 Suggests: RUnit, org.Hs.eg.db,
         TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
-Depends: GenomicRanges, R (>= 3.0.0)
+Depends: GenomicAlignments, GenomicRanges, R (>= 3.0.0)
 Imports: methods, BiocGenerics, IRanges, Biostrings, Rsamtools,
-        GenomicAlignments, GenomicFeatures, AnnotationDbi
+        GenomicFeatures, AnnotationDbi
 biocViews: Genetics, Infrastructure, Allelic Imbalance, AI, ASE,
         HighThroughputSequencing
 LazyData: TRUE
