Commit made by the Bioconductor Git-SVN bridge. Consists of 2 commit(s).
Commit information:

    Commit id: cea8f67a3e6c69e70e786fa681815886607114c8
    Commit message:
    new faster getAlleleCounts function
    Committed by Jesper Gådin <altebladet at hotmail.com>
    Commit date: 2014-02-20T07:46:09-08:00

    Commit id: fa2907483d84a139b6c51f78b3aa25dabf3f98f4
    Commit message:
    some documentation updates
    Committed by Jesper Gådin <altebladet at hotmail.com>
    Commit date: 2014-02-20T13:43:54-08:00

From: Bioconductor Git-SVN Bridge <bioc-sync@bioconductor.org>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@86650 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,8 @@ importFrom(GenomicRanges, seqnames)
 importFrom(GenomicRanges, "seqnames<-")
 importFrom(GenomicRanges, seqlevels)
 importFrom(GenomicRanges, "seqlevels<-")
-
+importFrom(GenomicAlignments, pileLettersAt)
+importFrom(GenomicAlignments, cigar)
 
 
 importFrom(IRanges, Rle)
@@ -124,7 +125,8 @@ export(
  decorateWithGenes,
  decorateWithExons,
  scanForHeterozygotes,
- getAlleleCount,
+ getAlleleCounts,
+ getAlleleCounts2,
  getGenesFromAnnotation,
  getDefaultMapBiasExpMean,
  getDefaultMapBiasExpMean3D,
