--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.1.13
+Version: 1.1.14
 Date: 2014-01-22
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
-Description: Provides a framework for allelic specific expression investigation using RNA-seq data
+Description: Provides a framework for allelic specific expression
+        investigation using RNA-seq data
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
 Suggests: RUnit, org.Hs.eg.db,
         TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
-Depends: GenomicAlignments, GenomicRanges,  R (>= 3.0.0)
+Depends: GenomicAlignments, GenomicRanges, R (>= 3.0.0)
 Imports: methods, BiocGenerics, IRanges, Biostrings, Rsamtools,
         GenomicFeatures, AnnotationDbi
-biocViews: Genetics, Infrastructure, Allelic Imbalance, AI, ASE,
-        HighThroughputSequencing
 LazyData: TRUE
 Collate: AllClasses.R AllGenerics.R initialize-methods.R
         ASEset-accessors.R auxillary-functions.R chisq.test-methods.R
         binom.test-methods.R barplot-methods.R locationplot-methods.R
+biocViews: Genetics, Infrastructure, Allelic Imbalance, AI, ASE,
+        Sequencing
