conflicts resolved while setting up Git-SVN bridge
From: Bioconductor Git-SVN Bridge <bioc-sync@bioconductor.org>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@87748 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ importFrom(GenomicRanges, granges)
 importFrom(GenomicRanges, GRangesList)
 importFrom(GenomicRanges, seqnames)
 importFrom(GenomicRanges, unlist)
+importFrom(GenomicRanges, reduce)
 importFrom(GenomicRanges, findOverlaps)
 importFrom(GenomicRanges, start)
 importFrom(GenomicRanges, end)
@@ -25,7 +26,6 @@ importFrom(IRanges, IRanges)
 importFrom(IRanges, elementMetadata)
 importFrom(IRanges, ranges)
 importFrom(IRanges, subsetByOverlaps)
-importFrom(IRanges, reduce)
 importFrom(IRanges, coverage)
 importFrom(IRanges, "%over%")
 importFrom(IRanges, "%within%")
