resync with latest changes in GenomicRanges/GenomeInfoDb
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@89905 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,6 @@ import(methods)
 import(BiocGenerics)
 import(S4Vectors)
 
-importFrom(GenomicRanges, GRanges)
-importFrom(GenomicRanges, granges)
-importFrom(GenomicRanges, GRangesList)
-importFrom(GenomicRanges, seqnames)
-importFrom(GenomicRanges, unlist)
-importFrom(GenomicRanges, reduce)
-importFrom(GenomicRanges, findOverlaps)
-importFrom(GenomicRanges, start)
-importFrom(GenomicRanges, end)
-importFrom(GenomicRanges, mcols)
-importFrom(GenomicRanges, seqnames)
-importFrom(GenomicRanges, "seqnames<-")
-importFrom(GenomicRanges, seqlevels)
-importFrom(GenomicRanges, "seqlevels<-")
-importFrom(GenomicAlignments, pileLettersAt)
-importFrom(GenomicAlignments, cigar)
-
 importFrom(IRanges, Rle)
 importFrom(IRanges, IRanges)
 importFrom(IRanges, ranges)
@@ -33,6 +16,18 @@ importFrom(IRanges, end) ##maybe not needed if also imported from GRanges?.
 importFrom(IRanges, width)
 importFrom(IRanges, which)
 importFrom(IRanges, resize)
+
+import(GenomeInfoDb)
+
+importFrom(GenomicRanges, GRanges)
+importFrom(GenomicRanges, granges)
+importFrom(GenomicRanges, GRangesList)
+importFrom(GenomicRanges, unlist)
+importFrom(GenomicRanges, reduce)
+importFrom(GenomicRanges, findOverlaps)
+importFrom(GenomicRanges, start)
+importFrom(GenomicRanges, end)
+importFrom(GenomicRanges, mcols)
 
 importFrom(Biostrings, subseq)
 importFrom(Biostrings, DNAStringSet)
@@ -57,6 +52,8 @@ importClassesFrom(GenomicAlignments, GAlignments)
 importClassesFrom(GenomicAlignments, GAlignmentPairs)
 importClassesFrom(GenomicAlignments, GAlignmentsList)
 
+importFrom(GenomicAlignments, pileLettersAt)
+importFrom(GenomicAlignments, cigar)
 importFrom(GenomicAlignments, cigarToRleList)
 importFrom(GenomicAlignments, GAlignments)
 importFrom(GenomicAlignments, GAlignmentPairs)
