--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.3.2
+Version: 1.3.3
 Date: 2014-03-25
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
@@ -11,8 +11,8 @@ License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
 Suggests: RUnit, org.Hs.eg.db,
         TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
-Depends: R (>= 3.0.0), BiocGenerics, S4Vectors, IRanges, GenomicRanges,
-        GenomicAlignments
+Depends: R (>= 3.0.0), BiocGenerics, S4Vectors, IRanges, GenomeInfoDb,
+        GenomicRanges, GenomicAlignments
 Imports: methods, AnnotationDbi, Biostrings, Rsamtools, GenomicFeatures
 LazyData: TRUE
 Collate: AllClasses.R AllGenerics.R initialize-methods.R
