--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.3.3
+Version: 1.3.4
 Date: 2014-03-25
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
@@ -18,5 +18,4 @@ LazyData: TRUE
 Collate: AllClasses.R AllGenerics.R initialize-methods.R
         ASEset-accessors.R auxillary-functions.R chisq.test-methods.R
         binom.test-methods.R barplot-methods.R locationplot-methods.R
-biocViews: Genetics, Infrastructure, Allelic Imbalance, AI, ASE,
-        Sequencing
+biocViews: Genetics, Infrastructure, Sequencing
