Commit made by the Bioconductor Git-SVN bridge. Consists of 4 commits.
Commit information:

Commit id: 495c548f1ca4a4e164741d5634b0f4687191d520
Commit message: added new method glocationplot, it works but may be in need of some checks
Committed by: Jesper Gådin
Author Name: Jesper Gådin
Commit date: 2014-07-22 19:02:26 +0200
Author date: 2014-07-22 19:02:26 +0200

Commit id: 7cab8ab9214c717a31dcf7c7266bf143edc72f36
Commit message: removed del column from countLists
Committed by: Jesper Gådin
Author Name: Jesper Gådin
Commit date: 2014-07-21 13:45:44 +0200
Author date: 2014-07-21 13:45:44 +0200

Commit id: c60929b76cff1924c7dca6891e951f86b776c76f
Commit message: new function arank that returns the order of total counts among all samples for each allele
Committed by: Jesper Gådin
Author Name: Jesper Gådin
Commit date: 2014-07-21 10:41:35 +0200
Author date: 2014-07-21 10:41:35 +0200

Commit id: 5837b28cd1b6d0389392f6aa46449a13d419de7f
Commit message: NaN as default when counts are missing in fraction function
Committed by: Jesper Gådin
Author Name: Jesper Gådin
Commit date: 2014-07-21 10:15:17 +0200
Author date: 2014-07-21 10:15:17 +0200



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@92707 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,7 +126,9 @@ export(
  realCigarPositions,
  realCigarPositionsList,
  getAreaFromGeneNames,
- getSnpIdFromLocation
+ getSnpIdFromLocation,
+ barplot.lattice.counts,
+ barplot.lattice.fraction
 ) 
 
 exportMethods(
@@ -134,6 +136,7 @@ exportMethods(
  alleleCounts,  
  mapBias, 
  fraction,
+ arank,
 
  #ennobler
  #getAnnotation,
@@ -144,8 +147,8 @@ exportMethods(
 
  #plots
  barplot,
- locationplot
- 
+ locationplot,
+ glocationplot
 )
 
 
