Commit made by the Bioconductor Git-SVN bridge. Consists of 1 commit.
Commit information:

Commit id: 73a89addb7e8d97dd436033af8932c0cb8cc4109
Commit message: two new methods to create Gviz tracks, one DataTrack-list, and one DetailsAnnotationTrack
Committed by: Jesper Gådin
Author Name: Jesper Gådin
Commit date: 2014-07-23 01:02:23 +0200
Author date: 2014-07-23 01:02:23 +0200



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@92726 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,5 @@ LazyData: TRUE
 Collate: AllClasses.R AllGenerics.R initialize-methods.R
         ASEset-accessors.R auxillary-functions.R chisq.test-methods.R
         binom.test-methods.R barplot-methods.R locationplot-methods.R
+	GvizTrack-methods.R
 biocViews: Genetics, Infrastructure, Sequencing
