follow renaming of TranscriptDb class -> TxDb
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@92943 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,7 +62,7 @@ importClassesFrom(GenomicRanges,GRangesList)
 importClassesFrom(GenomicRanges,GRanges)
 
 ##annotation stuff
-importClassesFrom(GenomicFeatures, TranscriptDb)
+importClassesFrom(GenomicFeatures, TxDb)
 importClassesFrom(AnnotationDbi, AnnotationDb)
 importClassesFrom(AnnotationDbi, OrgDb)
 importClassesFrom(AnnotationDbi, ChipDb)
