Commit made by the Bioconductor Git-SVN bridge. Consists of 4 commits.
Commit information:

Commit id: 551c61847b53756e7291f69e6e35cb88498af669
Commit message: and the bump
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-20 14:47:00 +0200
Author date: 2014-08-20 14:47:00 +0200

Commit id: f6c5e00b7f0fea73fdf4d8da32b85b672f7eaff0
Commit message: R CMD check ok
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-20 14:45:00 +0200
Author date: 2014-08-20 14:45:00 +0200

Commit id: 7be7d3bea298d3d38274f6b47c4e7268db09fc0c
Commit message: updated docs
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-20 13:43:43 +0200
Author date: 2014-08-20 13:43:43 +0200

Commit id: c8cfe1005a5f1202d89184fc1562929fbf29c616
Commit message: fixed counts option bug for trellis plots
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-19 16:46:29 +0200
Author date: 2014-08-19 16:46:29 +0200



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@93489 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,9 @@
 import(methods)
 import(BiocGenerics)
 import(S4Vectors)
+import(Gviz)
+import(lattice)
+
 
 importFrom(IRanges, IRanges)
 importFrom(IRanges, ranges)
@@ -127,8 +130,8 @@ export(
  realCigarPositionsList,
  getAreaFromGeneNames,
  getSnpIdFromLocation,
- barplot.lattice.counts,
- barplot.lattice.fraction,
+ barplotLatticeCounts,
+ barplotLatticeFraction,
  coverageMatrixListFromGAL
 ) 
 
