Commit made by the Bioconductor Git-SVN bridge. Consists of 1 commit.
Commit information:

Commit id: 317bc409414ae63db658d4d1d14232ac82d95610
Commit message: a move from depends to imports
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-20 18:35:26 +0200
Author date: 2014-08-20 18:35:26 +0200



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@93493 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,10 @@ License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
 Suggests: RUnit, org.Hs.eg.db,
         TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
-Depends: R (>= 3.1.0), BiocGenerics, S4Vectors, IRanges, GenomeInfoDb,
-        GenomicRanges, GenomicAlignments, Gviz, lattice
-Imports: methods, AnnotationDbi, Biostrings, Rsamtools, GenomicFeatures
+Depends: R (>= 3.1.0), BiocGenerics, S4Vectors, IRanges, 
+        GenomicRanges, GenomicAlignments, grid, GenomeInfoDb
+Imports: methods, AnnotationDbi, Biostrings, Rsamtools, GenomicFeatures,
+	Gviz, lattice
 LazyData: TRUE
 Collate: AllClasses.R AllGenerics.R initialize-methods.R
         ASEset-accessors.R auxillary-functions.R chisq.test-methods.R
