--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,35 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.3.9
-Date: 2014-08-20
+Version: 1.3.10
+Date: 2014-08-24
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
 Description: Provides a framework for allelic specific expression
-        investigation using RNA-seq data
+    investigation using RNA-seq data
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
-Suggests: RUnit, org.Hs.eg.db,
-        TxDb.Hsapiens.UCSC.hg19.knownGene,SNPlocs.Hsapiens.dbSNP.20120608
-Depends: R (>= 3.1.0), BiocGenerics, S4Vectors, IRanges, 
-        GenomicRanges, GenomicAlignments, grid, GenomeInfoDb
-Imports: methods, AnnotationDbi, Biostrings, Rsamtools, GenomicFeatures,
-	Gviz, lattice
+Suggests:
+    RUnit,
+    org.Hs.eg.db,
+    TxDb.Hsapiens.UCSC.hg19.knownGene,
+    SNPlocs.Hsapiens.dbSNP.20120608
+Depends:
+    R (>= 3.1.0),
+    BiocGenerics,
+    S4Vectors,
+    IRanges,
+    GenomicRanges,
+    GenomicAlignments,
+    grid,
+    GenomeInfoDb
+Imports:
+    methods,
+    AnnotationDbi,
+    Biostrings,
+    Rsamtools,
+    GenomicFeatures,
+    Gviz,
+    lattice
 LazyData: TRUE
-Collate: AllClasses.R AllGenerics.R initialize-methods.R
-        ASEset-accessors.R auxillary-functions.R chisq.test-methods.R
-        binom.test-methods.R barplot-methods.R locationplot-methods.R
-	GvizTrack-methods.R
 biocViews: Genetics, Infrastructure, Sequencing
