--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(impBamGAL)
 export(impBamGRL)
 export(impBcfGR)
 export(impBcfGRL)
+export(implodeList)
 export(realCigarPosition)
 export(realCigarPositions)
 export(realCigarPositionsList)
@@ -126,6 +127,7 @@ importFrom(Rsamtools,scanFa)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(lattice,barchart)
+importFrom(lattice,trellis.par.set)
 importFrom(stats,binom.test)
 importFrom(stats,chisq.test)
 importMethodsFrom(AnnotationDbi,columns)
