--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Provides a framework for allelic specific expression
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
 Suggests:
-    RUnit,
+    testthat,
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     SNPlocs.Hsapiens.dbSNP.20120608
