Commit made by the Bioconductor Git-SVN bridge. Consists of 2 commits.
Commit information:

Commit id: 207508e4694069a4456d823b76dc1a760e717ef9
Commit message: format by formatR
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-29 15:53:43 +0200
Author date: 2014-08-29 15:53:43 +0200

Commit id: 7b324c6641fffe777cf7e218cad9212b5784ebae
Commit message: format by formatR
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-08-29 15:53:12 +0200
Author date: 2014-08-29 15:53:12 +0200



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@93689 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,7 @@ importFrom(GenomicAlignments,readGAlignmentPairs)
 importFrom(GenomicAlignments,readGAlignmentPairsFromBam)
 importFrom(GenomicAlignments,readGAlignments)
 importFrom(GenomicAlignments,readGAlignmentsFromBam)
-importFrom(GenomicFeatures,"isActiveSeq<-")
+importFrom(GenomicFeatures,'isActiveSeq<-')
 importFrom(GenomicFeatures,cds)
 importFrom(GenomicFeatures,exons)
 importFrom(GenomicFeatures,isActiveSeq)
@@ -98,8 +98,8 @@ importFrom(Gviz,AnnotationTrack)
 importFrom(Gviz,DataTrack)
 importFrom(Gviz,DetailsAnnotationTrack)
 importFrom(Gviz,plotTracks)
-importFrom(IRanges,"%over%")
-importFrom(IRanges,"%within%")
+importFrom(IRanges,'%over%')
+importFrom(IRanges,'%within%')
 importFrom(IRanges,DataFrame)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,IntervalTree)
