Commit made by the Bioconductor Git-SVN bridge. Consists of 9 commits.
Commit information:

Commit id: a021c3e8d2d024a262f3a6d49467905b420a6ddd

    extra bump

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 13:05:04 +0200
Author date: 2014-09-12 13:05:04 +0200

Commit id: bbdc364724e2fb0a778ce8043c12031c6b16f912

    Merge branch 'master' of https://github.com/pappewaio/AllelicImbalance

    to keep in sync
    
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 12:59:17 +0200
Author date: 2014-09-12 12:59:17 +0200

Commit id: 742cad4c0a4814fba6d64d39f2e88166ff14e581

    fix glocationplot

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 12:48:30 +0200
Author date: 2014-09-12 12:48:30 +0200

Commit id: 417da6090489e305c4b6f3852f2d635ee941af5e

    bump

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 10:15:07 +0200
Author date: 2014-09-12 10:15:07 +0200

Commit id: 64cf3e2b2bdb2e489e789d00227486ffc3c342a3

    the table methods generic

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 10:12:06 +0200
Author date: 2014-09-12 10:12:06 +0200

Commit id: 32857b0ea792ed0571cf8435854a89389e3ae0aa

    graph improvements..

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-10 21:20:18 +0200
Author date: 2014-09-10 21:20:18 +0200

Commit id: 6bd282d9afe7884287a1cfe8c7f81b0a019276e5

    small improvements

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-10 13:58:28 +0200
Author date: 2014-09-10 13:58:28 +0200

Commit id: ef6ee4e88f9b3f94d988c8d92034b60d90cdf2bf

    new method table

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-10 00:05:15 +0200
Author date: 2014-09-10 00:05:15 +0200

Commit id: 7e0f80fc79de8aa968bb000bfc217189279d93bf

    increased performance of arank

Committed by: Jesper R. Gådin
Author N

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ exportMethods(glocationplot)
 exportMethods(lbarplot)
 exportMethods(locationplot)
 exportMethods(mapBias)
+exportMethods(table)
 import(BiocGenerics)
 import(GenomeInfoDb)
 import(S4Vectors)
@@ -62,6 +63,7 @@ importClassesFrom(GenomicRanges,GRangesList)
 importClassesFrom(Gviz,AnnotationTrack)
 importClassesFrom(Gviz,DataTrack)
 importClassesFrom(Gviz,DetailsAnnotationTrack)
+importClassesFrom(Gviz,GeneRegionTrack)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(Biostrings,DNAStringSet)
@@ -97,6 +99,7 @@ importFrom(GenomicRanges,unlist)
 importFrom(Gviz,AnnotationTrack)
 importFrom(Gviz,DataTrack)
 importFrom(Gviz,DetailsAnnotationTrack)
+importFrom(Gviz,GeneRegionTrack)
 importFrom(Gviz,plotTracks)
 importFrom(IRanges,'%over%')
 importFrom(IRanges,'%within%')
