Commit made by the Bioconductor Git-SVN bridge. Consists of 15 commits.
Commit information:

Commit id: d9d55b9a667e18fddaa144f90271b05bdc1115b1

    bump

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-13 18:36:55 +0200
Author date: 2014-09-13 18:36:55 +0200

Commit id: 880cb25331c6e7a69dfa4950dcd46823a30d267f

    two new complete and efficient inference methods

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-13 18:34:26 +0200
Author date: 2014-09-13 18:34:26 +0200

Commit id: 639b1eafdb8a2523640ce2e6f9f2fdf19e966d4e

    removed RUnit leftovers

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-13 00:58:12 +0200
Author date: 2014-09-13 00:58:12 +0200

Commit id: 6c0291935a2f81b9b12eb8d77627b02c5d4ea710

    new function inferAlleles

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-13 00:55:18 +0200
Author date: 2014-09-13 00:55:18 +0200

Commit id: 14f2e1a14d4f2a458ee6e2b651536783419f2360

    new function frequency

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 20:43:38 +0200
Author date: 2014-09-12 20:43:38 +0200

Commit id: 74e8c4d3eaba28eb79e57244bb4fe963070b9dd5

    Merge branch 'master' into mapBias

    to keep in sync
    
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-12 15:25:43 +0200
Author date: 2014-09-12 15:25:43 +0200

Commit id: 6b63c27ac87ab1667984a3505062dd1cadd5d04c

    rm a swp file

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-09 12:03:50 +0200
Author date: 2014-09-09 12:03:50 +0200

Commit id: 10146835f14db4beb56425d5f1ced92e06b5cdda

    merge with master done

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-09 12:03:02 +0200
Author date: 2014-09-09 12:03:02 +0200

Commit id: 4086ce023d75330531e260349fa4b8ac868b932a

    Merge branch 'master' into mapBias

Committed by: Jesper G

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(barplotLatticeFraction)
 export(coverageMatrixListFromGAL)
 export(decorateWithExons)
 export(decorateWithGenes)
+export(frequency)
 export(getAlleleCounts)
 export(getAlleleCounts2)
 export(getAnnotationDataFrame)
@@ -38,7 +39,10 @@ exportMethods(barplot)
 exportMethods(binom.test)
 exportMethods(chisq.test)
 exportMethods(fraction)
+exportMethods(frequency)
 exportMethods(glocationplot)
+exportMethods(inferAlleles)
+exportMethods(inferGenotypes)
 exportMethods(lbarplot)
 exportMethods(locationplot)
 exportMethods(mapBias)
@@ -103,8 +107,10 @@ importFrom(Gviz,GeneRegionTrack)
 importFrom(Gviz,plotTracks)
 importFrom(IRanges,'%over%')
 importFrom(IRanges,'%within%')
+importFrom(IRanges,DataFrame)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,IntervalTree)
+importFrom(IRanges,SimpleList)
 importFrom(IRanges,coverage)
 importFrom(IRanges,ranges)
 importFrom(IRanges,resize)
