Commit made by the Bioconductor Git-SVN bridge. Consists of 3 commits.
Commit information:

Commit id: 12807747b43e8a92e30f039233b678198b4b05ce

    add documentation

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-15 18:20:41 +0200
Author date: 2014-09-15 18:20:41 +0200

Commit id: abde930dab3213ba3f3b365a992e96727ef7fdbc

    new ReferenceBias class

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-15 16:33:26 +0200
Author date: 2014-09-15 16:33:26 +0200

Commit id: feb9e7250e6b8d2debe39dc9c1030f71562f693f

    new Refbias-class

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-09-15 14:02:20 +0200
Author date: 2014-09-15 14:02:20 +0200


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@94139 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,10 @@ export(implodeList)
 export(realCigarPosition)
 export(realCigarPositions)
 export(realCigarPositionsList)
+export(refBias)
 export(scanForHeterozygotes)
 exportClasses(ASEset)
+exportClasses(ReferenceBias)
 exportMethods("alleleCounts<-")
 exportMethods("genotype<-")
 exportMethods(ASEDAnnotationTrack)
@@ -53,6 +55,7 @@ exportMethods(locationplot)
 exportMethods(mapBias)
 exportMethods(refAllele)
 exportMethods(refFraction)
+exportMethods(show)
 exportMethods(table)
 import(BiocGenerics)
 import(GenomeInfoDb)
@@ -143,6 +146,7 @@ importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(lattice,barchart)
 importFrom(lattice,trellis.par.set)
+importFrom(methods,show)
 importFrom(stats,binom.test)
 importFrom(stats,chisq.test)
 importMethodsFrom(AnnotationDbi,columns)
