--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.3.20
-Date: 2014-09-01
+Version: 1.3.21
+Date: 2014-09-22
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
 Description: Provides a framework for allelic specific expression
@@ -16,20 +16,20 @@ Suggests:
     SNPlocs.Hsapiens.dbSNP.20120608
 Depends:
     R (>= 3.1.0),
-    BiocGenerics,
-    S4Vectors,
-    IRanges,
+    grid,
     GenomicRanges,
     GenomicAlignments,
-    grid,
-    GenomeInfoDb
 Imports:
     methods,
+    BiocGenerics,
     AnnotationDbi,
     Biostrings,
+    S4Vectors,
+    IRanges,
     Rsamtools,
     GenomicFeatures,
     Gviz,
-    lattice
+    lattice,
+    GenomeInfoDb
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
