Commit made by the Bioconductor Git-SVN bridge. Consists of 14 commits.
Commit information:

Commit id: dcb3a2cbdb4d9c1b6639b244b2cc315e627f03d5

    fixes to pass r cmd check

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-18 22:24:30 +0100
Author date: 2014-11-18 22:24:30 +0100

Commit id: 46b08c01bba8cb9bcdc21ea185d0aff3762cfd90

    Merge branch 'master' of https://github.com/pappewaio/AllelicImbalance

    sync with repository
    
Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-18 14:45:22 +0100
Author date: 2014-11-18 14:45:22 +0100

Commit id: e42e29fe121dc6db803c945ce81c3f28e966f358

    improvements to locationplots

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-18 14:44:36 +0100
Author date: 2014-11-18 14:44:36 +0100

Commit id: 42b3977487f790a02ba1f1db091f0c7e701c8ef5

    test for import functions done

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-15 16:49:54 +0100
Author date: 2014-11-15 16:49:54 +0100

Commit id: f940337d1b1e47223e3c020e649ebfb903bdfa35

    Merge branch 'fast-counter'

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-03 12:29:09 +0100
Author date: 2014-11-03 12:29:09 +0100

Commit id: db20158e477ec7cd95e401100dcf2a3438b4502f

    improved import and count methods

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-03 12:28:37 +0100
Author date: 2014-11-03 12:28:37 +0100

Commit id: 29cc44fab229a96d9c831da402e1e7f65f11eb7c

    finished providing extra legend options

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-10-29 14:22:09 +0100
Author date: 2014-10-29 14:22:09 +0100

Commit id: e00df94d31d5d41319ba457cab3a1701fedd10d3

    more options to barplot legend phase1

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-10-29 11:34:01 +0100
Author date: 2014-10-29 11:34:01 +0100

Commit id: 

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 export("alleleCounts<-")
 export("genotype<-")
+export(ASEsetFromArrays)
+export(ASEsetFromBam)
 export(ASEsetFromCountList)
 export(RBias)
 export(alleleCounts)
 export(arank)
 export(barplotLatticeCounts)
 export(barplotLatticeFraction)
+export(countAllelesFromBam)
 export(countsPerSample)
 export(countsPerSnp)
 export(coverageMatrixListFromGAL)
@@ -38,6 +41,7 @@ export(impBamGRL)
 export(impBcfGR)
 export(impBcfGRL)
 export(implodeList)
+export(legendBarplot)
 export(mapBias)
 export(realCigarPosition)
 export(realCigarPositions)
@@ -96,6 +100,7 @@ importClassesFrom(Gviz,AnnotationTrack)
 importClassesFrom(Gviz,DataTrack)
 importClassesFrom(Gviz,DetailsAnnotationTrack)
 importClassesFrom(Gviz,GeneRegionTrack)
+importClassesFrom(Gviz,GenomeAxisTrack)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(Biostrings,DNAStringSet)
@@ -143,12 +148,15 @@ importFrom(IRanges,resize)
 importFrom(IRanges,subsetByOverlaps)
 importFrom(IRanges,unlist)
 importFrom(IRanges,which)
+importFrom(Rsamtools,ApplyPileupsParam)
 importFrom(Rsamtools,BamFileList)
 importFrom(Rsamtools,BcfFile)
 importFrom(Rsamtools,BcfFileList)
 importFrom(Rsamtools,FaFile)
+importFrom(Rsamtools,PileupFiles)
 importFrom(Rsamtools,ScanBamParam)
 importFrom(Rsamtools,ScanBcfParam)
+importFrom(Rsamtools,applyPileups)
 importFrom(Rsamtools,indexBam)
 importFrom(Rsamtools,indexBcf)
 importFrom(Rsamtools,indexFa)
@@ -162,6 +170,8 @@ importFrom(Rsamtools,scanFaIndex)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(lattice,barchart)
+importFrom(lattice,panel.abline)
+importFrom(lattice,panel.barchart)
 importFrom(lattice,trellis.par.set)
 importFrom(methods,show)
 importMethodsFrom(AnnotationDbi,columns)
