Commit made by the Bioconductor Git-SVN bridge. Consists of 2 commits.
Commit information:

Commit id: 5bbb47d7ceea8719b7a57da6659ddf73dbdf5677

    impr fa-gen

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-24 19:45:05 +0100
Author date: 2014-11-24 19:45:05 +0100

Commit id: 2cc1275524c58493c8c67ac1a191ae53a2623d99

    bugfix ASEsetFromBam

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-24 18:46:16 +0100
Author date: 2014-11-24 18:46:16 +0100


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@97071 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(impBcfGR)
 export(impBcfGRL)
 export(implodeList)
 export(legendBarplot)
+export(makeMaskedFasta)
 export(mapBias)
 export(realCigarPosition)
 export(realCigarPositions)
@@ -174,4 +175,5 @@ importFrom(lattice,panel.abline)
 importFrom(lattice,panel.barchart)
 importFrom(lattice,trellis.par.set)
 importFrom(methods,show)
+importFrom(seqinr,write.fasta)
 importMethodsFrom(AnnotationDbi,columns)
