Commit made by the Bioconductor Git-SVN bridge. Consists of 7 commits.
Commit information:

Commit id: fb58d9542aeb23ecef87ea39a48ed62eee1456a8

    version bump

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-02 01:18:16 +0100
Author date: 2014-12-02 01:18:16 +0100

Commit id: 91e4457f1d59c0ef5e90c249369727565350a252

    removed swp file and misplaced file

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-02 01:00:06 +0100
Author date: 2014-12-02 01:00:06 +0100

Commit id: a3713173a66728789bd6d087bd0b5f7c8e14800f

    fixed docs

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-02 00:55:57 +0100
Author date: 2014-12-02 00:55:57 +0100

Commit id: 95d869f2badaf82aa3b1359faf9550507e097640

    two new parameters for detectAI, gc and verbose

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-01 19:54:27 +0100
Author date: 2014-12-01 19:54:27 +0100

Commit id: 23c0442c5d558f071c98f986af0e9c89fd75573e

    new function to get reference bias matrix

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-01 19:29:33 +0100
Author date: 2014-12-01 19:29:33 +0100

Commit id: b576fbb0748de18b668621a8376f0eb48665252d

    modified calculation of frequency and detectAI so they can accept vectors of cutoff points

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-12-01 18:23:11 +0100
Author date: 2014-12-01 18:23:11 +0100

Commit id: 69d8978beacd316c720215b402fd3492d9228449

    new class GlobalAnalysis

Committed by: Jesper R. Gådin
Author Name: Jesper R. Gådin
Commit date: 2014-11-27 16:48:46 +0100
Author date: 2014-11-27 16:48:46 +0100


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@97260 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("genotype<-")
 export(ASEsetFromArrays)
 export(ASEsetFromBam)
 export(ASEsetFromCountList)
+export(DetectedAIFromArray)
 export(RBias)
 export(alleleCounts)
 export(arank)
@@ -20,6 +21,7 @@ export(defaultMapBias)
 export(detectAI)
 export(fraction)
 export(frequency)
+export(gba)
 export(genotype)
 export(getAlleleCounts)
 export(getAnnotationDataFrame)
@@ -44,12 +46,21 @@ export(implodeList)
 export(legendBarplot)
 export(makeMaskedFasta)
 export(mapBias)
+export(mapBiasRef)
+export(randomRef)
 export(realCigarPosition)
 export(realCigarPositions)
 export(realCigarPositionsList)
 export(refbiasByAnnotation)
+export(referenceFrequency)
 export(scanForHeterozygotes)
+export(thresholdCountSample)
+export(thresholdDeltaFrequency)
+export(thresholdFrequency)
+export(thresholdPvalue)
 exportClasses(ASEset)
+exportClasses(DetectedAI)
+exportClasses(GlobalAnalysis)
 exportClasses(ReferenceBias)
 exportMethods("alleleCounts<-")
 exportMethods("genotype<-")
@@ -76,10 +87,17 @@ exportMethods(inferGenotypes)
 exportMethods(lbarplot)
 exportMethods(locationplot)
 exportMethods(mapBias)
+exportMethods(mapBiasRef)
+exportMethods(randomRef)
 exportMethods(refAllele)
 exportMethods(refFraction)
 exportMethods(refbiasByAnnotation)
+exportMethods(referenceFrequency)
 exportMethods(show)
+exportMethods(thresholdCountSample)
+exportMethods(thresholdDeltaFrequency)
+exportMethods(thresholdFrequency)
+exportMethods(thresholdPvalue)
 import(BiocGenerics)
 import(GenomeInfoDb)
 import(S4Vectors)
