--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 export("alleleCounts<-")
 export("genotype<-")
+export("phase<-")
 export(ASEsetFromArrays)
 export(ASEsetFromBam)
 export(ASEsetFromCountList)
 export(DetectedAIFromArray)
+export(GAnalysis)
 export(RBias)
 export(alleleCounts)
 export(arank)
@@ -18,8 +20,10 @@ export(coverageMatrixListFromGAL)
 export(decorateWithExons)
 export(decorateWithGenes)
 export(defaultMapBias)
+export(defaultPhase)
 export(detectAI)
 export(fraction)
+export(fractionPlotDf)
 export(frequency)
 export(gba)
 export(genotype)
@@ -47,6 +51,9 @@ export(legendBarplot)
 export(makeMaskedFasta)
 export(mapBias)
 export(mapBiasRef)
+export(phase)
+export(phaseArray2Matrix)
+export(phaseMatrix2Array)
 export(randomRef)
 export(realCigarPosition)
 export(realCigarPositions)
@@ -64,6 +71,7 @@ exportClasses(GlobalAnalysis)
 exportClasses(ReferenceBias)
 exportMethods("alleleCounts<-")
 exportMethods("genotype<-")
+exportMethods("phase<-")
 exportMethods(ASEDAnnotationTrack)
 exportMethods(CoverageDataTrack)
 exportMethods(alleleCounts)
@@ -74,8 +82,10 @@ exportMethods(chisq.test)
 exportMethods(countsPerSample)
 exportMethods(countsPerSnp)
 exportMethods(defaultMapBias)
+exportMethods(defaultPhase)
 exportMethods(detectAI)
 exportMethods(fraction)
+exportMethods(fractionPlotDf)
 exportMethods(frequency)
 exportMethods(genotype)
 exportMethods(glocationplot)
@@ -83,11 +93,15 @@ exportMethods(hetFilt)
 exportMethods(hetPerSample)
 exportMethods(hetPerSnp)
 exportMethods(inferAlleles)
+exportMethods(inferAltAllele)
 exportMethods(inferGenotypes)
 exportMethods(lbarplot)
 exportMethods(locationplot)
 exportMethods(mapBias)
 exportMethods(mapBiasRef)
+exportMethods(phase)
+exportMethods(phaseArray2Matrix)
+exportMethods(phaseMatrix2Array)
 exportMethods(randomRef)
 exportMethods(refAllele)
 exportMethods(refFraction)
@@ -191,6 +205,7 @@ importFrom(lattice,barchart)
 importFrom(lattice,panel.abline)
 importFrom(lattice,panel.barchart)
 importFrom(lattice,trellis.par.set)
+importFrom(lattice,xyplot)
 importFrom(methods,show)
 importFrom(seqinr,write.fasta)
 importMethodsFrom(AnnotationDbi,columns)
