Commit made by the Bioconductor Git-SVN bridge.
Commit id: b7feaeae7d1c83b951c779688b37c8b82ae45faa

    Merge pull request #1 from jimhester/patch-1

    Fix trailing comma in description

Commit id: b7e0456af39ebb162a4c2e8fcda622fda4d19c3c

    Fix trailing comma in description

    This comma was causing a parse error in `devtools::install()`.


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100494 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Depends:
     R (>= 3.1.0),
     grid,
     GenomicRanges,
-    GenomicAlignments,
+    GenomicAlignments
 Imports:
     methods,
     BiocGenerics,
