Commit made by the Bioconductor Git-SVN bridge.
Commit id: 6857ce5557ba033442a469c66be2bb538038c2bb

    fixed merge conflict


Commit id: f2bd4cc83186b81ae3f787869d3ab16ffb32fc0f

    release new vignette


Commit id: 2a4a98f4fb697b3bdb95f06c1c4e4aa1df1bad05

    barplot update for the new vignette


Commit id: 4ac66fe33975c32b6314fd464364fa7e3fa925ea

    minor fixes to plots and code in vignette


Commit id: 44be1cd811e1d0cb30c27dd0e8d63d2e8e76110a

    pdf style which builds biocStyle


Commit id: ffba208fd9231919b3f6354a2932d7ddfe6d27e3

    all content added


Commit id: b5d0119f4218683597a6ce57c4f205941f83bd0c

    content add4


Commit id: d7b74eb2e8d5aee1589588d42f89cec354c573e6

    build ignore added


Commit id: 64384959514da18d489616f1ac21c30ae9e265bf

    content add3


Commit id: 3071e2a2e740285ff0719fb5bb000489821b7f2c

    content add2


Commit id: aa87b883df5f5363467b71d4f225a2258772fbf0

    content add


Commit id: a5cbe66d8c5233649344fa852d6aa5d63fc71ce4

    Merge branch 'master' into vignette-change


Commit id: 83abce843279f256ea4781ff55381a5e7afb0c76

    non important commit


Commit id: 8394a0c20cc9931c51d44c6316d4a424689516ed

    vignette init works



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100710 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.5.6
+Version: 1.5.7
 Date: 2014-12-02
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
@@ -9,12 +9,13 @@ Description: Provides a framework for allelic specific expression
     investigation using RNA-seq data
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
-Suggests:
+Suggests: 
     testthat,
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
-    SNPlocs.Hsapiens.dbSNP.20120608
-Depends:
+    SNPlocs.Hsapiens.dbSNP.20120608,
+    knitr
+Depends: 
     R (>= 3.1.0),
     grid,
     GenomicRanges,
@@ -34,3 +35,4 @@ Imports:
     GenomeInfoDb
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
+VignetteBuilder: knitr
