--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(DetectedAIFromArray)
 export(GAnalysis)
 export(RBias)
 export(alleleCounts)
+export(annotationBarplot)
 export(arank)
 export(barplotLatticeCounts)
 export(barplotLatticeFraction)
