Commit made by the Bioconductor Git-SVN bridge.
Commit id: d2392eac628fa0972307424abc2be07c0f00b10d

    added GT import from Vcf to vignette


Commit id: 8644e08de51b1efcaabda9799e07fb4888792e80

    added scanVcf to vignette



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100713 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(phase)
 export(phaseArray2Matrix)
 export(phaseMatrix2Array)
 export(randomRef)
+export(readGT)
+export(readVcf)
 export(realCigarPosition)
 export(realCigarPositions)
 export(realCigarPositionsList)
@@ -200,6 +202,8 @@ importFrom(Rsamtools,scanBamWhat)
 importFrom(Rsamtools,scanBcf)
 importFrom(Rsamtools,scanFa)
 importFrom(Rsamtools,scanFaIndex)
+importFrom(VariantAnnotation,readGT)
+importFrom(VariantAnnotation,readVcf)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(lattice,barchart)
